--- a/res/plugin/fancybox/demo/index.html
+++ b/res/plugin/fancybox/demo/index.html
@@ -5,44 +5,46 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 	<!-- Add jQuery library -->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+	<script type="text/javascript" src="../lib/jquery-1.9.0.min.js"></script>
 
 	<!-- Add mousewheel plugin (this is optional) -->
 	<script type="text/javascript" src="../lib/jquery.mousewheel-3.0.6.pack.js"></script>
 
 	<!-- Add fancyBox main JS and CSS files -->
-	<script type="text/javascript" src="../source/jquery.fancybox.js"></script>
-	<link rel="stylesheet" type="text/css" href="../source/jquery.fancybox.css" media="screen" />
+	<script type="text/javascript" src="../source/jquery.fancybox.js?v=2.1.4"></script>
+	<link rel="stylesheet" type="text/css" href="../source/jquery.fancybox.css?v=2.1.4" media="screen" />
 
 	<!-- Add Button helper (this is optional) -->
-	<link rel="stylesheet" type="text/css" href="../source/helpers/jquery.fancybox-buttons.css?v=2.0.3" />
-	<script type="text/javascript" src="../source/helpers/jquery.fancybox-buttons.js?v=2.0.3"></script>
+	<link rel="stylesheet" type="text/css" href="../source/helpers/jquery.fancybox-buttons.css?v=1.0.5" />
+	<script type="text/javascript" src="../source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
 
 	<!-- Add Thumbnail helper (this is optional) -->
-	<link rel="stylesheet" type="text/css" href="../source/helpers/jquery.fancybox-thumbs.css?v=2.0.3" />
-	<script type="text/javascript" src="../source/helpers/jquery.fancybox-thumbs.js?v=2.0.3"></script>
+	<link rel="stylesheet" type="text/css" href="../source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
+	<script type="text/javascript" src="../source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+
+	<!-- Add Media helper (this is optional) -->
+	<script type="text/javascript" src="../source/helpers/jquery.fancybox-media.js?v=1.0.5"></script>
 
 	<script type="text/javascript">
 		$(document).ready(function() {
 			/*
-				Simple image gallery. Use default settings
-			*/
+			 *  Simple image gallery. Uses default settings
+			 */
 
 			$('.fancybox').fancybox();
 
 			/*
-				Different effects
-			*/
+			 *  Different effects
+			 */
 
-			// Change title type, overlay opening speed and opacity
+			// Change title type, overlay closing speed
 			$(".fancybox-effects-a").fancybox({
 				helpers: {
 					title : {
 						type : 'outside'
 					},
 					overlay : {
-						speedIn : 500,
-						opacity : 0.95
+						speedOut : 0
 					}
 				}
 			});
@@ -64,13 +66,15 @@
 				wrapCSS    : 'fancybox-custom',
 				closeClick : true,
 
+				openEffect : 'none',
+
 				helpers : {
 					title : {
 						type : 'inside'
 					},
 					overlay : {
 						css : {
-							'background-color' : '#eee'	
+							'background' : 'rgba(238,238,238,0.85)'
 						}
 					}
 				}
@@ -94,8 +98,8 @@
 			});
 
 			/*
-				Button helper. Disable animations, hide close button, change title type and content
-			*/
+			 *  Button helper. Disable animations, hide close button, change title type and content
+			 */
 
 			$('.fancybox-buttons').fancybox({
 				openEffect  : 'none',
@@ -120,8 +124,8 @@
 
 
 			/*
-				Thumbnail helper. Disable animations, hide close button, arrows and slide to next gallery item if clicked
-			*/
+			 *  Thumbnail helper. Disable animations, hide close button, arrows and slide to next gallery item if clicked
+			 */
 
 			$('.fancybox-thumbs').fancybox({
 				prevEffect : 'none',
@@ -131,7 +135,7 @@
 				arrows    : false,
 				nextClick : true,
 
-				helpers : { 
+				helpers : {
 					thumbs : {
 						width  : 50,
 						height : 50
@@ -139,10 +143,66 @@
 				}
 			});
 
+			/*
+			 *  Media helper. Group items, disable animations, hide arrows, enable media and button helpers.
+			*/
+			$('.fancybox-media')
+				.attr('rel', 'media-gallery')
+				.fancybox({
+					openEffect : 'none',
+					closeEffect : 'none',
+					prevEffect : 'none',
+					nextEffect : 'none',
+
+					arrows : false,
+					helpers : {
+						media : {},
+						buttons : {}
+					}
+				});
+
+			/*
+			 *  Open manually
+			 */
+
+			$("#fancybox-manual-a").click(function() {
+				$.fancybox.open('1_b.jpg');
+			});
+
+			$("#fancybox-manual-b").click(function() {
+				$.fancybox.open({
+					href : 'iframe.html',
+					type : 'iframe',
+					padding : 5
+				});
+			});
+
+			$("#fancybox-manual-c").click(function() {
+				$.fancybox.open([
+					{
+						href : '1_b.jpg',
+						title : 'My title'
+					}, {
+						href : '2_b.jpg',
+						title : '2nd title'
+					}, {
+						href : '3_b.jpg'
+					}
+				], {
+					helpers : {
+						thumbs : {
+							width: 75,
+							height: 50
+						}
+					}
+				});
+			});
+
+
 		});
 	</script>
 	<style type="text/css">
-		.fancybox-custom .fancybox-outer {
+		.fancybox-custom .fancybox-skin {
 			box-shadow: 0 0 50px #222;
 		}
 	</style>
@@ -181,18 +241,20 @@
 	<ul>
 		<li><a class="fancybox" href="#inline1" title="Lorem ipsum dolor sit amet">Inline</a></li>
 		<li><a class="fancybox fancybox.ajax" href="ajax.txt">Ajax</a></li>
-		<li><a class="fancybox fancybox.iframe" href="http://jquery.com">Iframe</a></li>
+		<li><a class="fancybox fancybox.iframe" href="iframe.html">Iframe</a></li>
 		<li><a class="fancybox" href="http://www.adobe.com/jp/events/cs3_web_edition_tour/swfs/perform.swf">Swf</a></li>
 	</ul>
 
-	<div style="display: none;">
-		<div id="inline1" style="width:400px;">
-			<h3>Etiam quis mi eu elit</h3>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien. Vestibulum imperdiet porta ante ac ornare. Nulla et lorem eu nibh adipiscing ultricies nec at lacus. Cras laoreet ultricies sem, at blandit mi eleifend aliquam. Nunc enim ipsum, vehicula non pretium varius, cursus ac tortor. Vivamus fringilla congue laoreet. Quisque ultrices sodales orci, quis rhoncus justo auctor in. Phasellus dui eros, bibendum eu feugiat ornare, faucibus eu mi. Nunc aliquet tempus sem, id aliquam diam varius ac. Maecenas nisl nunc, molestie vitae eleifend vel, iaculis sed magna. Aenean tempus lacus vitae orci posuere porttitor eget non felis. Donec lectus elit, aliquam nec eleifend sit amet, vestibulum sed nunc.
-			</p>
-		</div>
+	<div id="inline1" style="width:400px;display: none;">
+		<h3>Etiam quis mi eu elit</h3>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien. Vestibulum imperdiet porta ante ac ornare. Nulla et lorem eu nibh adipiscing ultricies nec at lacus. Cras laoreet ultricies sem, at blandit mi eleifend aliquam. Nunc enim ipsum, vehicula non pretium varius, cursus ac tortor. Vivamus fringilla congue laoreet. Quisque ultrices sodales orci, quis rhoncus justo auctor in. Phasellus dui eros, bibendum eu feugiat ornare, faucibus eu mi. Nunc aliquet tempus sem, id aliquam diam varius ac. Maecenas nisl nunc, molestie vitae eleifend vel, iaculis sed magna. Aenean tempus lacus vitae orci posuere porttitor eget non felis. Donec lectus elit, aliquam nec eleifend sit amet, vestibulum sed nunc.
+		</p>
 	</div>
+
+	<p>
+		Ajax example will not run from your local computer and requires a server to run.
+	</p>
 
 	<h3>Button helper</h3>
 	<p>
@@ -216,9 +278,27 @@
 		<a class="fancybox-thumbs" data-fancybox-group="thumb" href="1_b.jpg"><img src="1_s.jpg" alt="" /></a>
 	</p>
 
+	<h3>Media helper</h3>
 	<p>
-		Ajax example will not run from your local computer and requires a server to run.
+		Will not run from your local computer, requires a server to run.
 	</p>
+
+	<ul>
+		<li><a class="fancybox-media" href="http://www.youtube.com/watch?v=opj24KnzrWo">Youtube</a></li>
+		<li><a class="fancybox-media" href="http://vimeo.com/25634903">Vimeo</a></li>
+		<li><a class="fancybox-media" href="http://www.metacafe.com/watch/7635964/">Metacafe</a></li>
+		<li><a class="fancybox-media" href="http://www.dailymotion.com/video/xoeylt_electric-guest-this-head-i-hold_music">Dailymotion</a></li>
+		<li><a class="fancybox-media" href="http://twitvid.com/QY7MD">Twitvid</a></li>
+		<li><a class="fancybox-media" href="http://twitpic.com/7p93st">Twitpic</a></li>
+		<li><a class="fancybox-media" href="http://instagr.am/p/IejkuUGxQn">Instagram</a></li>
+	</ul>
+
+	<h3>Open manually</h3>
+	<ul>
+		<li><a id="fancybox-manual-a" href="javascript:;">Open single item</a></li>
+		<li><a id="fancybox-manual-b" href="javascript:;">Open single item, custom options</a></li>
+		<li><a id="fancybox-manual-c" href="javascript:;">Open gallery</a></li>
+	</ul>
 
 	<p>
 		Photo Credit: Instagrammer @whitjohns
